--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-MMP 240 Class Website 
-Janae Sylvester Oliver
-Janae.SylvesterOliver001@stu.bmcc.cuny.edu
+<h1>MMP 240 Class Website</h1>
+<h2>Janae Sylvester Oliver</h2>
+<a>Janae.SylvesterOliver001@stu.bmcc.cuny.edu</a>
 
-About Me
-My major is Multimedia Programming and Design
+<h3>About Me</h3>
+<p>My major is Multimedia Programming and Design</p>
 
 
-Assignments
+<h4>Assignments</h4>
 Exercise 2
 
 
