--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>MMP 240 Class Website</h1>
-<h2>Janae Sylvester Oliver</h2>
+<h2>Janaé Sylvester Oliver</h2>
 <a>Janae.SylvesterOliver001@stu.bmcc.cuny.edu</a>
 
 <h3>About Me</h3>
