--- a/recipe.html
+++ b/recipe.html
@@ -8,7 +8,7 @@
     <h1>Best Chocolate Chip Cookies</h1>
     <p>This is the best chocolate chip cookie recipe ever ! Simple ingredients, quick to prepare an amazingly delicious </p>.
 
-   <h2>Ingredients/h2>
+   <h2>Ingredients</h2>
      <ul>
       <li>1 cup butter, softened</li>
       <li>1 cup of white sugar</li>
