--- a/recipe.html
+++ b/recipe.html
@@ -10,7 +10,7 @@
 
    <h2>Ingredients </h2>
      <ul>
-      <li>1 cup butter, softened</li>
+      <li>1 cup butter softened</li>
       <li>1 cup of white sugar</li>
       <li>1 cup packed brown sugar</li>  
       <li>2 large eggs</li>
