--- a/recipe.html
+++ b/recipe.html
@@ -7,7 +7,7 @@
    <body>
     <h1>Best Chocolate Chip Cookies</h1>
     <p>This is the best chocolate chip cookie recipe ever ! Simple ingredients, quick to prepare an amazingly delicious </p>.
-    <img src = "IMG_1216.jpeg" alt = "cookies">
+    <img src = "IMG_1216.jpeg" alt = "cookies width = "350">
    <h2>Ingredients </h2>
      <ul>
       <li>1 cup butter softened</li>
