--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   < body>
         <h1>MMP 240 Class Website</h1>
-        <img src = "MyArt.jpg" alt = "art"
+        <img src = "MyArt.jpg" alt = "art" width = "400px" height = "400px">
         <h2>Janaé Sylvester Oliver</h2>
         <a>Janae.SylvesterOliver001@stu.bmcc.cuny.edu</a>
 
