--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <h4>Assignments</h4>
         <ul>
-           <li>Exercise 2</li>
+           <li>Recipe Assignment </li>
            <li>Exercise 3</li>
           
         </ul>
