--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <h2>Janaé Sylvester Oliver</h2>
         <a>Janae.SylvesterOliver001@stu.bmcc.cuny.edu</a>
 
-        <h3>About Me</h3>
+        <h3>About Me</h3>e
         <p>My major is Multimedia Programming and Design</p>
 
 
         <h4>Assignments</h4>
         <ul>
-           <li>Recipe Assignment </li>
+           <li> <a href "recipe.html">Recipe Assignment </a> </li>
            <li>Exercise 3</li>
           
         </ul>
