--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <html>
   <head>
     <meta charset= " UTF-8" >
-    <meta name= "viewport" content= "width=device-width, intial-scale=1.0"
+    <meta name= "viewport" content= "width=device-width, intial-scale=1.0">
   </head>
-  < body>
+ 
+    < body>
         <h1>MMP 240 Class Website</h1>
         <img src = "MyArt.jpg" alt = "art" width = "400px" height = "400px">
         <h2>Janaé Sylvester Oliver</h2>
         <a>Janae.SylvesterOliver001@stu.bmcc.cuny.edu</a>
 
-        <h3>About Me</h3>e
+        <h3>About Me</h3>
         <p>My major is Multimedia Programming and Design</p>
 
 
@@ -23,7 +24,7 @@
         </ul>
        
     
-  </body>
+    </body>
 
   
 </html>
