--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <h4>Assignments</h4>
         <ul>
-           <li> <a href "recipe.html">Recipe Assignment </a> </li>
+           <li> <a href="recipe.html"> Recipe Assignment </a> </li>
            <li>Exercise 3</li>
           
         </ul>
