--- a/recipe.html
+++ b/recipe.html
@@ -22,7 +22,7 @@
       <li>2 cup semi sweet chocolate chips</li> 
       <li>1 cup chopped walnuts</li>
      </ul>
-     
+     <div>
      <h2> Directions </h2>
      <ol>
       <li> Preheat oven to 350 degrees F (175 degrees C)</li>
@@ -34,6 +34,6 @@
    <h2>  Nutrition Facts </h2>
   <p> <strong>Per Serving:</strong><br>
    297.8 calories; protein 3.6g 7% DV; carbohydrates 38.9g 13% DV; fat 15.6g 24% DV; cholesterol 35.8mg 12% DV; sodium165.8mg 7% DV. </p>
-
+     </div>
    </body> 
 </html>
