--- a/ex4.html
+++ b/ex4.html
@@ -9,9 +9,11 @@
     /* Type CSS code here */
       body{ 
         width:640px 
+        margin-left:auto;
+        margin-right:auto;
           }
       p{
-      border: solid 3px rgb(71,195,178)
+      border: solid 3px rgb(71,195,178);
       margin-bottom: 2em;
       padding: 1em;
       }
