--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <h4>Assignments</h4>
         <ul>
            <li> <a href="recipe.html"> Recipe Assignment </a> </li>
-           <li>Exercise 3</li>
+           <li><a href="ex2.html"> Exercise 2 </a> </li>
+           <li><a href="ex3.html"> Exercise 3 </a> </li>
+           <li><a href="ex4.html"> Exercise 4 </a> </li>
           
         </ul>
        
